styles/properties.module.css
.container {
  font-size: 1.6rem;
  display: grid;
  grid-template-columns: 3fr 7fr;
  position: relative;
  top: 6rem;
  display: grid;
  color: #707079;
  margin-bottom: 10rem;
}
.search {
  display: grid;
  grid-template-rows: 7rem;
  grid-auto-rows: 7rem;
  align-items: center;
  justify-items: center;
  position: sticky;
  top: 5rem;
}
.upper {
  background-color: #f2f4f5;
  border: 1px solid #ebebeb;
  width: 80%;
  height: 5rem;
  padding: 0 1rem;
  color: #707079;
  cursor: pointer;
  position: relative;
}
.property_btn {
  height: 5rem;
  width: 80%;
  background-color: rgba(1, 2, 78, 0.76);
  color: #fff;
  border: none;
  cursor: pointer;
}
.buyRent {
  display: flex;
  justify-content: space-evenly;
  width: 80%;
  background-color: #f2f4f5;
  color: #707079;
  text-transform: uppercase;
}
.buyRent > * {
  width: 100%;
  height: 5rem;
  margin: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  font-size: 1.7rem;
  font-weight: 500;
}
.selected {
  background-color: rgba(1, 2, 78, 0.76);
  color: #fff;
}
.properties_prt {
  margin-right: 2rem;
}
.property {
  display: grid;
  grid-template-columns: 3fr 7fr;
  column-gap: 2rem;
  background-color: #f2f4f5;
  cursor: pointer;
  margin-bottom: 3rem;
}
.property:not(:last-child) {
  border-bottom: 1px solid #ebebeb;
}

.property svg {
  color: rgba(1, 2, 78, 0.76);
}
.bg_image {
  height: 100%;
  background-position: center;
  background-size: cover;
}
.fs_tr {
  background-color: rgba(1, 2, 78, 0.76);
  color: #fff;
  padding: 0.5rem 2rem;
  width: max-content;
}
.property span {
  color: rgba(1, 2, 78, 0.76);
  font-weight: 700;
}
.location {
  display: flex;
  align-items: center;
}
.location p {
  padding-left: 1rem;
}
.p_footer {
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 9rem;
}
.p_footer div {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.p_footer p {
  margin: 1rem 0;
}
.pagination {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 15rem;
}
.pagination p {
  height: 4rem;
  width: 4rem;
  border: 1px solid #ebebeb;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: all 0.2s;
}
.pagination p:hover {
  cursor: pointer;
  background-color: rgba(1, 2, 78, 0.76);
  color: #fff;
}

@media only screen and (max-width: 1000px) {
  .container {
    grid-template-columns: 1fr;
  }
  .search {
    position: relative;
  }
  .properties_prt {
    margin-right: 0%;
    padding: 5rem 2rem 0 2rem;
  }
  .properties_prt h3 {
    text-align: center;
  }
}

@media only screen and (max-width: 767px) {
  .property {
    grid-template-columns: 1fr;
  }
}

